packages/sycamore-macro/tests/view/component-fail.stderr
error: unexpected end of input, expected either `(` or `{`
  --> tests/view/component-fail.rs:28:26
   |
28 |         let _: View<G> = view! { cx, Component };
   |                          ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `view` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find function, tuple struct or tuple variant `UnknownComponent` in this scope
  --> tests/view/component-fail.rs:25:38
   |
25 |         let _: View<G> = view! { cx, UnknownComponent() };
   |                                      ^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function, tuple struct or tuple variant `UnknownComponent` in this scope
  --> tests/view/component-fail.rs:26:38
   |
26 |         let _: View<G> = view! { cx, UnknownComponent {} };
   |                                      ^^^^^^^^^^^^^^^^ not found in this scope

error[E0308]: mismatched types
  --> tests/view/component-fail.rs:29:48
   |
29 |         let _: View<G> = view! { cx, Component(1) };
   |                                                ^ expected `()`, found integer

error[E0308]: mismatched types
  --> tests/view/component-fail.rs:31:26
   |
31 |         let _: View<G> = view! { cx, PropComponent() };
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected struct `Prop`, found `()`
   |
   = note: this error originates in the macro `view` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/view/component-fail.rs:32:52
   |
32 |         let _: View<G> = view! { cx, PropComponent {} };
   |                                                    ^^ expected struct `Prop`, found `()`

error[E0308]: mismatched types
  --> tests/view/component-fail.rs:33:60
   |
33 |         let _: View<G> = view! { cx, PropComponent { prop: 123 } };
   |                                                            ^^^ expected `&str`, found integer
